cmake_minimum_required(VERSION 2.8)

set(SOURCE_FILES
        testcases.c)

add_executable(${CMAKE_PROJECT_NAME}_testcases ${SOURCE_FILES})
target_link_libraries(${CMAKE_PROJECT_NAME}_testcases json2map)

add_test(NAME test_map2json_emptyMap COMMAND ${CMAKE_PROJECT_NAME}_testcases test_map2json_emptyMap)
add_test(NAME test_map2json_null COMMAND ${CMAKE_PROJECT_NAME}_testcases test_map2json_null)
add_test(NAME test_map2json_true COMMAND ${CMAKE_PROJECT_NAME}_testcases test_map2json_true)
add_test(NAME test_map2json_false COMMAND ${CMAKE_PROJECT_NAME}_testcases test_map2json_false)
add_test(NAME test_map2json_numberInt COMMAND ${CMAKE_PROJECT_NAME}_testcases test_map2json_numberInt)
add_test(NAME test_map2json_numberFloat COMMAND ${CMAKE_PROJECT_NAME}_testcases test_map2json_numberFloat)
add_test(NAME test_map2json_array COMMAND ${CMAKE_PROJECT_NAME}_testcases test_map2json_array)
add_test(NAME test_map2json_primitive COMMAND ${CMAKE_PROJECT_NAME}_testcases test_map2json_primitive)
add_test(NAME test_map2json_deepNesting COMMAND ${CMAKE_PROJECT_NAME}_testcases test_map2json_deepNesting)

add_test(NAME test_json2map_emptyJson COMMAND ${CMAKE_PROJECT_NAME}_testcases test_json2map_emptyJson)
add_test(NAME test_json2map_null COMMAND ${CMAKE_PROJECT_NAME}_testcases test_json2map_null)
add_test(NAME test_json2map_true COMMAND ${CMAKE_PROJECT_NAME}_testcases test_json2map_true)
add_test(NAME test_json2map_false COMMAND ${CMAKE_PROJECT_NAME}_testcases test_json2map_false)
add_test(NAME test_json2map_numberInt COMMAND ${CMAKE_PROJECT_NAME}_testcases test_json2map_numberInt)
add_test(NAME test_json2map_numberFloat COMMAND ${CMAKE_PROJECT_NAME}_testcases test_json2map_numberFloat)
add_test(NAME test_json2map_array COMMAND ${CMAKE_PROJECT_NAME}_testcases test_json2map_array)
add_test(NAME test_json2map_primitive COMMAND ${CMAKE_PROJECT_NAME}_testcases test_json2map_primitive)
add_test(NAME test_json2map_deepNesting COMMAND ${CMAKE_PROJECT_NAME}_testcases test_json2map_deepNesting)
add_test(NAME test_json2map_jsonNull COMMAND ${CMAKE_PROJECT_NAME}_testcases test_json2map_jsonNull)
add_test(NAME test_json2map_noDataHook COMMAND ${CMAKE_PROJECT_NAME}_testcases test_json2map_noDataHook)
add_test(NAME test_json2map_objectHook COMMAND ${CMAKE_PROJECT_NAME}_testcases test_json2map_objectHook)