cmake_minimum_required(VERSION 2.8)

set(SOURCE_FILES
        testcases.c)

if (NOT TARGET json2map_testcases)
    add_executable(json2map_testcases ${SOURCE_FILES})
    target_link_libraries(json2map_testcases json2map)

    add_test(NAME test_map2json_emptyMap COMMAND json2map_testcases test_map2json_emptyMap)
    add_test(NAME test_map2json_null COMMAND json2map_testcases test_map2json_null)
    add_test(NAME test_map2json_true COMMAND json2map_testcases test_map2json_true)
    add_test(NAME test_map2json_false COMMAND json2map_testcases test_map2json_false)
    add_test(NAME test_map2json_numberInt COMMAND json2map_testcases test_map2json_numberInt)
    add_test(NAME test_map2json_numberFloat COMMAND json2map_testcases test_map2json_numberFloat)
    add_test(NAME test_map2json_array COMMAND json2map_testcases test_map2json_array)
    add_test(NAME test_map2json_primitive COMMAND json2map_testcases test_map2json_primitive)
    add_test(NAME test_map2json_deepNesting COMMAND json2map_testcases test_map2json_deepNesting)
    add_test(NAME test_map2json_prefix COMMAND json2map_testcases test_map2json_prefix)

    add_test(NAME test_json2map_emptyJson COMMAND json2map_testcases test_json2map_emptyJson)
    add_test(NAME test_json2map_null COMMAND json2map_testcases test_json2map_null)
    add_test(NAME test_json2map_true COMMAND json2map_testcases test_json2map_true)
    add_test(NAME test_json2map_false COMMAND json2map_testcases test_json2map_false)
    add_test(NAME test_json2map_numberInt COMMAND json2map_testcases test_json2map_numberInt)
    add_test(NAME test_json2map_numberFloat COMMAND json2map_testcases test_json2map_numberFloat)
    add_test(NAME test_json2map_array COMMAND json2map_testcases test_json2map_array)
    add_test(NAME test_json2map_primitive COMMAND json2map_testcases test_json2map_primitive)
    add_test(NAME test_json2map_deepNesting COMMAND json2map_testcases test_json2map_deepNesting)
    add_test(NAME test_json2map_jsonNull COMMAND json2map_testcases test_json2map_jsonNull)
    add_test(NAME test_json2map_noDataHook COMMAND json2map_testcases test_json2map_noDataHook)
    add_test(NAME test_json2map_objectHook COMMAND json2map_testcases test_json2map_objectHook)
    add_test(NAME test_json2map_prefix COMMAND json2map_testcases test_json2map_prefix)
endif ()